[gd_scene load_steps=2 format=3 uid="uid://cc5ocbuexeov5"]

[ext_resource type="Script" path="res://Nodes/Base/BaseNode.gd" id="1_0tvqc"]

[node name="BaseNode" type="Node2D"]
script = ExtResource("1_0tvqc")

[node name="Panel" type="Panel" parent="."]
offset_left = -67.0
offset_top = -52.0
offset_right = 72.0
offset_bottom = 52.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -22.0
offset_right = 32.0
offset_bottom = 24.0
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
fit_content = true

[node name="OutputBox" type="VBoxContainer" parent="."]
offset_left = 34.0
offset_top = -34.0
offset_right = 49.0
offset_bottom = 34.0
scale = Vector2(1.02223, 1.00757)
theme_override_constants/separation = 20

[node name="InputBox" type="VBoxContainer" parent="."]
offset_left = -46.0
offset_top = -34.0
offset_right = -31.0
offset_bottom = 34.0
scale = Vector2(0.962215, 0.784071)
theme_override_constants/separation = 20

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="RichTextLabel" to="." method="_on_rich_text_label_gui_input"]
